--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-primary-subtle">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Travel Journal</a>
+        <a class="navbar-brand fw-semibold" href="/">Travel Journal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
