--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,22 +1,35 @@
 <h1>New Entry</h1>
 
-<form action="/entries" method="post">
-  <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
+<% if @current_user != nil %>
+  <form action="/entries" method="post">
 
-  <p>
-    <label for="title_input">Title</label>
-    <input type="text" name="title" id="title_input">
-  </p>
+    <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
-  <p>
-    <label for="description_input">Description</label>
-    <input type="text" name="description" id="description_input">
-  </p>
+    <div class = "mb-3">
+      <label for="title_input" class="form-label">Title</label>
+      <input type="text" class="form-control" name="title" id="title_input" placeholder="Entry Title">
+    </div>
 
-  <p>
-    <label for="occurred_on_input">Occurred On</label>
-    <input type="date" name="occurred_on" id="occurred_on_input">
-  </p>
+    <div class = "mb-3">
+      <label for="description_input" class="form-label">Description</label>
+      <textarea class="form-control" name="description" id="description_input" rows="3"></textarea>
+    </div>
 
-  <button>Save</button>
+    <div class = "mb-3">
+      <label for="occurred_on_input" class="form-label">Occurred On</label>
+      <input type="date" class="form-control" name="occurred_on" id="occurred_on_input">
+    </div>
+
+    <div class="mb-3">
+      <label for="uploaded_image_input" class="form-label">Upload Image</label>
+      <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control">
+      <div id="photohelp" class="form-text">An optional image can be attached above.</div>
+    </div>
+
+  <button type="button" class="btn btn-primary">Save</button>
+  <a href="/">Cancel</a>
 </form>
+
+<% else %>
+  You must first <a href="/login">login</a> to post.
+<% end %>
