--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       <%= flash["notice"] %>
     </div>
    
-    <div class="container-fluid">
+    <div class="container mt-3">
       <%= yield %>
     </div>
     
