--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -27,7 +27,7 @@
     </div>
 
   <button type="button" class="btn btn-primary">Save</button>
-  <a href="/">Cancel</a>
+  <a href="/places/<%= params["place_id"] %>">Cancel</a>
 </form>
 
 <% else %>
