--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,13 @@
 <h1>Places</h1>
 
+<div>
+  <a href="/places/new" class="btn btn-info">New Place </a>
+</div>
+
+<p></p>
+
 <ul>
   <% for place in @places %>
     <li><a href="/places/<%= place["id"] %>"><%= place["name"] %></a></li>
   <% end %>
 </ul>
-
-<p>
-  <a href="/places/new">New place</a>
-</p>
