--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,10 +1,18 @@
 <h1>New Place</h1>
 
-<form action="/places" method="post">
-  <p>
-    <label for="name_input">Name</label>
-    <input type="text" name="name" id="name_input">
-  </p>
+<% if @current_user != nil %>
+  <form action="/places" method="post">
 
-  <button>Save</button>
-</form>
+    <div class = "mb-3">
+      <label for="place_input" class="form-label">Name of New Place</label>
+      <input type="text" class="form-control" name="name" id="name_input" placeholder="Add Name Here">
+    </div>
+  
+    <button type="button" class="btn btn-primary">Save</button>
+    <a href="/">Cancel</a>
+  </form>
+
+  <% else %>
+    You must first <a href="/login">login</a> to post.
+  <% end %>
+  
