--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -26,7 +26,7 @@
       <div id="photohelp" class="form-text">An optional image can be attached above.</div>
     </div>
 
-  <button type="button" class="btn btn-primary">Save</button>
+  <button class="btn btn-primary">Save</button>
   <a href="/places/<%= params["place_id"] %>">Cancel</a>
 </form>
 
