--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -8,11 +8,11 @@
       <input type="text" class="form-control" name="name" id="name_input" placeholder="Add Name Here">
     </div>
   
-    <button type="button" class="btn btn-primary">Save</button>
+    <button class="btn btn-primary">Save</button>
     <a href="/">Cancel</a>
   </form>
 
   <% else %>
-    You must first <a href="/login">login</a> to post.
+    You must first <a href="/login">login</a> to add a new place.
   <% end %>
   
