--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Entry</h1>
 
 <% if @current_user != nil %>
-  <form action="/entries" method="post">
+  <form action="/entries" method="post" enctype="multipart/form-data">
 
     <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
@@ -22,7 +22,7 @@
 
     <div class="mb-3">
       <label for="uploaded_image_input" class="form-label">Upload Image</label>
-      <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control">
+      <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control" accept="image/png, image/jpg, image/jpeg, image/gif">
       <div id="photohelp" class="form-text">An optional image can be attached above.</div>
     </div>
 
