--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -7,6 +7,7 @@
     <h3><%= entry["title"] %></h3>
     <h4><%= entry["occurred_on"] %></h4>
     <p><%= entry["description"] %></p>
+    <p> <img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid"></p>
   <% end %>
 
   <p>
