--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,23 +1,28 @@
 <h1><%= @place["name"] %></h1>
 
-<% if User.find_by({ "id" => session["user_id"] }) != nil %>
+<div class="row"> 
 
-  <h2>My Entries</h2>
-  <% for entry in @entries %>
-    <h3><%= entry["title"] %></h3>
-    <h4><%= entry["occurred_on"] %></h4>
-    <p><%= entry["description"] %></p>
-    <p> <img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid"></p>
+  <% if User.find_by({ "id" => session["user_id"] }) != nil %>
+
+    <h2>My Entries</h2>
+    <% for entry in @entries %>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <h3><%= entry["title"] %></h3>
+        <h4><%= entry["occurred_on"] %></h4>
+        <p><%= entry["description"] %></p>
+        <p> <img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid"></p>
+    <% end %>
+      </div>
+      <p>
+        <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
+      </p>
+
+      <p>
+        <a href="/places">Back to All Places</a>
+      </p>
+    
+  <% else %>
+    You must first <a href="/login">login</a> to view the entries for <%= @place["name"] %>.
   <% end %>
 
-  <p>
-    <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
-  </p>
-
-  <p>
-    <a href="/places">Back to All Places</a>
-  </p>
-
-<% else %>
-  You must first <a href="/login">login</a> to view the entries for <%= @place["name"] %>.
-<% end %>
+</div>
