--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,28 +1,19 @@
 <h1><%= @place["name"] %></h1>
+<h3>My Entries</h3>
+<p></p>
+<div>
+  <a href="/entries/new?place_id=<%= @place["id"] %>" class="btn btn-info">New Entry</a>
+  <a href="/places" class="btn btn-light">Back to All Places</a>
+</div>
+<p></p>
 
-<div class="row"> 
-
-  
-
-    <h2>My Entries</h2>
+<div class="row">  
     <% for entry in @entries %>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3><%= entry["title"] %></h3>
-        <h4><%= entry["occurred_on"] %></h4>
-        <p><%= entry["description"] %></p>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <h4><%= entry["title"] %></h4>
+        <h6><%= entry["occurred_on"] %></h6>
         <p> <img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid"></p>
-    <% end %>
+        <p><%= entry["description"] %></p>
       </div>
-      <p>
-        <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
-      </p>
-
-      <p>
-        <a href="/places">Back to All Places</a>
-      </p>
-    
-  
-    You must first <a href="/login">login</a> to view the entries for <%= @place["name"] %>.
-  
-
+    <% end %>   
 </div>
